name: smten-plugin
version: 4.0.0.0
synopsis: Smten library
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2012, 2013  SRI International, Inc.
author: Richard Uhler
maintainer: ruhler@csail.mit.edu
category: Language
build-type: Simple
cabal-version: >=1.8
stability: experimental
description:
  This package provides the ghc-plugin for smten.
  .
  Smten is a language which integrates functional programming and SMT query
  orchestraction. The surface syntax and features of Smten are the same as
  Haskell. The Smten compiler is implemented as a plugin to the ghc haskell
  compiler.
  . 
  Smten code should be written as in Haskell with the following exceptions:
  * The language extensions NoImplicitPrelude and RebindableSyntax should
    always be used
  .
  * The Smten libraries should be imported instead of standard Haskell
    libraries. For example, import Smten.Prelude instead of Prelude,
    import Smten.Data.Maybe instead of Data.Maybe, and so on. The Smten
    libraries are available in the smten-base and smten-lib cabal packages.
  .
  The Smten ghc-plugin compiles Smten code into Haskell code, which can then
  be compiled using ghc into an executable. To compile the Smten code, add the
  flag \"-fplugin=Smten.Plugin.Plugin\" when calling ghc. For example:
  .
  > ghc --make -c -fplugin=Smten.Plugin.Plugin MySmtenProgram.hs
  .
  For each smten module, a haskell module will be generated using the name of
  the smten module prefixed with \"Smten.Compiled\". The generated haskell files
  can be found in the Smten\/Compiled directory. For the main module, a
  file called Smten\/Compiled\/Main.hs will be generated.
  .
  After the haskell files have been generated, call ghc in ordinary fashion to
  generate an executable:
  .
  > ghc --make -o mysmtenprogram Smten/Compiled/Main.hs

source-repository this
  type: git
  location: https://github.com/ruhler/smten.git
  --branch:
  --tag:

library
  exposed-modules:
    Smten.Plugin.Annotations
    Smten.Plugin.Plugin
  other-modules:
    Smten.Plugin.CG
    Smten.Plugin.Class
    Smten.Plugin.Data
    Smten.Plugin.Exp
    Smten.Plugin.Name
    Smten.Plugin.Newtype
    Smten.Plugin.TyCon
    Smten.Plugin.Type
    Smten.Plugin.Output.Syntax
    Smten.Plugin.Output.Ppr
  build-depends: base ==4.6.*, ghc ==7.6.*, directory ==1.2.*,
                 mtl ==2.1.*, pretty ==1.1.*
  ghc-options: -fwarn-unused-binds -fwarn-unused-imports

