name: smten-smt
version: 2.1.0.0
synopsis: SMT primitives and backends for smten
license: AllRightsReserved
license-file: LICENSE
author: Richard Uhler
maintainer: ruhler@csail.mit.edu
category: Language
build-type: Simple
cabal-version: >=1.8
stability: experimental
source-repository this
  type: git
  location: /afs/csail.mit.edu/u/r/ruhler/git/smten
--branch:
--tag:
library
  exposed-modules:
    Smten.SMT.Primitives

    Smten.SMT.STP.FFI
    Smten.SMT.STP.STP

    Smten.SMT.Yices.FFI2
    Smten.SMT.Yices.Yices1
    Smten.SMT.Yices.Yices2

  build-depends: base ==4.6.*, mtl ==2.1.*, pretty ==1.1.*, array ==0.4.*,
                 directory ==1.2.*, template-haskell ==2.8.*,
                 hashable ==1.2.*, containers ==0.5.*, bytestring ==0.10.*,
                 transformers ==0.3.*, smten ==2.1.*
  extra-libraries: stp stdc++ yices1 yices2
  --ghc-prof-options: -fprof-auto-top
