name: smten-stp
version: @VERSION@-@GITTAG@
synopsis: Smten library
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2012, 2013, 2014  SRI International, Inc.
author: Richard Uhler
maintainer: ruhler@csail.mit.edu
category: Language
build-type: Simple
cabal-version: >=1.8
stability: experimental
description:
  This package provides an STP backend for smten.
  .
  The smten-stp solver requires STP is installed. STP can be downloaded
  from <http://sites.google.com/site/stpfastprover>.
  .
  You may need to add the library path containing libstp as an extra
  library directory to your cabal configuration file. For example, if the stp
  library is installed in \/home\/ruhler\/local\/lib, and your cabal
  configuration is in ~\/.cabal\/config, add the following line to
  ~\/.cabal\/config:
  .
  >   extra-lib-dirs: /home/ruhler/local/lib

source-repository this
  type: git
  location: https://github.com/ruhler/smten.git
  branch: @GITBRANCH@
  tag: @GITTAG@

library
  exposed-modules:
    Smten.Symbolic.Solver.STP
    Smten.Compiled.Smten.Symbolic.Solver.STP

  other-modules:
    Smten.Runtime.STPFFI
  
    Smten.Tests.STP
    Smten.Compiled.Smten.Tests.STP

  build-depends: base ==4.7.*, hashtables ==1.1.*,
                 smten ==@VERSIONMAJOR@.*, smten-base ==@VERSIONMAJOR@.*,
                 smten-lib ==@VERSIONMAJOR@.*
  extra-libraries: stp stdc++
  ghc-options: -fwarn-unused-binds -fwarn-unused-imports

Test-Suite test-smten-stp
  type: exitcode-stdio-1.0
  main-is: tests.hs
  build-depends: base ==4.7.*, hashtables ==1.1.*,
                 smten-base ==@VERSIONMAJOR@.*, smten-lib ==@VERSIONMAJOR@.*
  extra-libraries: stp stdc++

