name: smten-yices1
version: 4.0.0.0
synopsis: Smten library
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2012, 2013  SRI International, Inc.
author: Richard Uhler
maintainer: ruhler@csail.mit.edu
category: Language
build-type: Simple
cabal-version: >=1.8
stability: experimental
data-dir: share
data-files:
    yices1rename.txt
description:
  This package provides a yices1 backend for smten.
  .
  The smten-yices1 solver requires yices1 is installed. Yices1 can be
  downloaded from <http://yices.csl.sri.com>. The smten-yices1 package
  looks for the yices1 library under the name \"yices1\". Because the yices1
  library ships as \"yices\", you will need to provide a link to \"yices1\".
  .
  In order to use both yices1 and yices2 libraries in a single executable,
  this package assumes the symbols in the yices1 library have been renamed so
  that prefixes yices_ are now yices1_. The rename map is included in the
  share directory of this package.
  .
  For example, if you have libyices.a for yices1, then to create the \"yices1\"
  library suitable for use with smten, run the command:
  .
  >  objcopy --redefine-syms=yicse1rename.txt libyices.a libyices1.a
  .
  You may need to add the library path containing libyices1.a as an extra
  library directory to your cabal configuration file. For example, if the yices1
  library is installed in \/home\/ruhler\/local\/lib, and your cabal
  configuration is in ~\/.cabal\/config, add the following line to
  ~\/.cabal\/config:
  .
  >   extra-lib-dirs: /home/ruhler/local/lib

source-repository this
  type: git
  location: https://github.com/ruhler/smten.git
  --branch:
  --tag:

library
  exposed-modules:
    Smten.Symbolic.Solver.Yices1
    Smten.Compiled.Smten.Symbolic.Solver.Yices1
  
  other-modules:
    Smten.Runtime.Yices1FFI

    Smten.Tests.Yices1
    Smten.Compiled.Smten.Tests.Yices1

  build-depends: base ==4.6.*,
                 smten ==4.0.*, smten-base ==4.0.*, smten-lib ==4.0.*
  extra-libraries: yices1
  ghc-options: -fwarn-unused-binds -fwarn-unused-imports

test-suite test-smten-yices1
  type: exitcode-stdio-1.0
  main-is: tests.hs
  build-depends: base ==4.6.*,
                 smten-base ==4.0.*, smten-lib ==4.0.*
  extra-libraries: yices1

