name: smten-yices1
version: @VERSION@-@GITTAG@
synopsis: Smten library
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2012, 2013  SRI International, Inc.
author: Richard Uhler
maintainer: ruhler@csail.mit.edu
category: Language
build-type: Simple
cabal-version: >=1.8
stability: experimental
data-dir: share
data-files:
    yices1rename.txt
description:
  This package provides a yices1 backend for smten.

source-repository this
  type: git
  location: https://github.com/ruhler/smten.git
  branch: @GITBRANCH@
  tag: @GITTAG@

library
  exposed-modules:
    Smten.Symbolic.Solver.Yices1
    Smten.Compiled.Smten.Symbolic.Solver.Yices1
  
  other-modules:
    Smten.Runtime.Yices1FFI

    Smten.Tests.Yices1
    Smten.Compiled.Smten.Tests.Yices1

  build-depends: base ==4.6.*,
                 smten ==@VERSIONMAJOR@.*, smten-base ==@VERSIONMAJOR@.*,
                 smten-lib ==@VERSIONMAJOR@.*
  extra-libraries: dl
  c-sources: y1.c
  ghc-options: -fwarn-unused-binds -fwarn-unused-imports

test-suite test-smten-yices1
  type: exitcode-stdio-1.0
  main-is: tests.hs
  build-depends: base ==4.6.*,
                 smten-base ==@VERSIONMAJOR@.*, smten-lib ==@VERSIONMAJOR@.*
  extra-libraries: dl
  c-sources: y1.c

