name: smten-yices1
version: @VERSION@-@GITTAG@
synopsis: Smten yices1 backend
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2012, 2013, 2014  SRI International, Inc.
author: Richard Uhler
maintainer: ruhler@csail.mit.edu
category: Language
build-type: Simple
cabal-version: >=1.8
stability: experimental
description:
  This package provides a yices1 backend for smten.
  .
  The smten-yices1 solver requires yices1 is installed. Yices1 can be
  downloaded from <http://yices.csl.sri.com/index.shtml>
  .
  You may need to add the library path containing libyices as an extra
  library directory to your cabal configuration file. For example, if the stp
  library is installed in \/home\/ruhler\/local\/lib, and your cabal
  configuration is in ~\/.cabal\/config, add the following line to
  ~\/.cabal\/config:
  .
  >   extra-lib-dirs: /home/ruhler/local/lib

source-repository this
  type: git
  location: https://github.com/ruhler/smten.git
  branch: @GITBRANCH@
  tag: @GITTAG@

library
  exposed-modules:
    Smten.Symbolic.Solver.Yices1
    Smten.Compiled.Smten.Symbolic.Solver.Yices1

  other-modules:
    Smten.Runtime.Yices1.FFI
  
    Smten.Tests.Yices1
    Smten.Compiled.Smten.Tests.Yices1

  build-depends: base ==4.6.*, hashtables ==1.0.*,
                 smten ==@VERSIONMAJOR@.*, smten-base ==@VERSIONMAJOR@.*,
                 smten-lib ==@VERSIONMAJOR@.*
  extra-libraries: yices
  ghc-options: -fwarn-unused-binds -fwarn-unused-imports

Test-Suite y1test
  type: exitcode-stdio-1.0
  main-is: tests.hs
  build-depends: base ==4.6.*, hashtables ==1.0.*,
                 smten-base ==@VERSIONMAJOR@.*, smten-lib ==@VERSIONMAJOR@.*
  extra-libraries: yices

