name: smten-yices2
version: 4.0.0.0
synopsis: Smten yices2 backend
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2012, 2013  SRI International, Inc.
author: Richard Uhler
maintainer: ruhler@csail.mit.edu
category: Language
build-type: Simple
cabal-version: >=1.8
stability: experimental
description:
  The smten-yices2 package provides a yices2 backend for smten.
  .
  The smten-yices2 solver requires yices2 is installed. Yices2 can be
  downloaded from <http://yices.csl.sri.com/download-yices2.shtml>. The
  smten-yices2 package looks for the yices2 library under the name \"yices2\".
  Because the yices2 library ships as \"yices\", you will need to provide a
  link to \"yices2\".
  .
  For example, if you have libyices.so.2.1.0 for yices2 installed, to create
  the \"yices2\" library suitable for use with smten, run the commands:
  .
  >  ln -s libyices.so.2.1.0 libyices2.so
  >  ln -s libyices.so.2.1.0 libyices.so.2.0 
  .
  You may need to add the library path containing libyices.so.2.1.0 as an
  extra library directory to your cabal configuration file. For example, if
  the yices2 library is installed in \/home\/ruhler\/local\/lib, and your cabal
  configuration is in ~\/.cabal\/config, add the following line to
  ~\/.cabal\/config:
  .  
  >   extra-lib-dirs: /home/ruhler/local/lib

source-repository this
  type: git
  location: /afs/csail.mit.edu/u/r/ruhler/git/smten
  --branch:
  --tag:

library
  exposed-modules:
    Smten.Symbolic.Solver.Yices2
    Smten.Compiled.Smten.Symbolic.Solver.Yices2
  
  other-modules:
    Smten.Runtime.Yices2FFI

    Smten.Tests.Yices2
    Smten.Compiled.Smten.Tests.Yices2

    Smten.Tests.SMT.Memory.Yices2
    Smten.Compiled.Smten.Tests.SMT.Memory.Yices2
    
  build-depends: base ==4.6.*,
                 smten-plugin ==4.0.*, smten-base ==4.0.*, smten-lib ==4.0.*
  extra-libraries: yices2
  ghc-options: -fwarn-unused-binds -fwarn-unused-imports

test-suite test-smten-yices2
  type: exitcode-stdio-1.0
  main-is: tests.hs
  build-depends: base ==4.6.*,
                 smten-base ==4.0.*, smten-lib ==4.0.*
  extra-libraries: yices2

benchmark bench-memory
  type: exitcode-stdio-1.0
  main-is: bench-memory.hs
  build-depends: base ==4.6.*, smten-base ==4.0.*, smten-lib ==4.0.*
  extra-libraries: yices2

