name: smten-yices2
version: 4.0.0.0
synopsis: Smten yices2 backend
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2012, 2013  SRI International, Inc.
author: Richard Uhler
maintainer: ruhler@csail.mit.edu
category: Language
build-type: Simple
cabal-version: >=1.8
stability: experimental
description:
  The smten-yices2 package provides a yices2 backend for smten.
  .
  The smten-yices2 solver requires yices2 is installed. Yices2 can be
  downloaded from <http://yices.csl.sri.com/download-yices2.shtml>. The
  smten-yices2 package looks for the yices2 library at runtime in the file
  "libyices.so.2.1". You may need to provide a symlink for libyices.so.2.1 to
  the version of yices2 library you have instsalled (for example,
  libyices.so.2.1.0), and you may need to add the directory containing
  libyices.so.2.1 to the LD_LIBRARY_PATH environment variable at runtime.

source-repository this
  type: git
  location: https://github.com/ruhler/smten.git
  --branch:
  --tag:

library
  exposed-modules:
    Smten.Symbolic.Solver.Yices2
    Smten.Compiled.Smten.Symbolic.Solver.Yices2
  
  other-modules:
    Smten.Runtime.Yices2FFI
    Smten.Runtime.Yices2FFICGen

    Smten.Tests.Yices2
    Smten.Compiled.Smten.Tests.Yices2

  build-depends: base ==4.6.*,
                 smten ==4.0.*, smten-base ==4.0.*, smten-lib ==4.0.*
  extra-libraries: dl
  c-sources: y2.c
  ghc-options: -fwarn-unused-binds -fwarn-unused-imports

test-suite test-smten-yices2
  type: exitcode-stdio-1.0
  main-is: tests.hs
  build-depends: base ==4.6.*,
                 smten-base ==4.0.*, smten-lib ==4.0.*
  extra-libraries: dl
  c-sources: y2.c

