name: smten-z3
version: 4.0.0.0
synopsis: Smten library
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2012, 2013  SRI International, Inc.
author: Richard Uhler
maintainer: ruhler@csail.mit.edu
category: Language
build-type: Simple
cabal-version: >=1.8
stability: experimental
description:
  This package provides a z3 backend for smten.

source-repository this
  type: git
  location: /afs/csail.mit.edu/u/r/ruhler/git/smten
  --branch:
  --tag:

library
  exposed-modules:
    Smten.Symbolic.Solver.Z3
    Smten.Compiled.Smten.Symbolic.Solver.Z3
  
  other-modules:
    Smten.Runtime.Z3FFI

    Smten.Tests.Z3
    Smten.Compiled.Smten.Tests.Z3

    Smten.Tests.SMT.Memory.Z3
    Smten.Compiled.Smten.Tests.SMT.Memory.Z3

    
  build-depends: base ==4.6.*, hashtables ==1.0.*,
                 smten-plugin ==4.0.*, smten-base ==4.0.*, smten-lib ==4.0.*
  extra-libraries: z3
  ghc-options: -fwarn-unused-binds -fwarn-unused-imports

test-suite test-smten-z3
  type: exitcode-stdio-1.0
  main-is: tests.hs
  build-depends: base ==4.6.*, hashtables ==1.0.*,
                 smten-base ==4.0.*, smten-lib ==4.0.*
  extra-libraries: z3

benchmark bench-memory
  type: exitcode-stdio-1.0
  main-is: bench-memory.hs
  build-depends: base ==4.6.*, hashtables ==1.0.*,
                 smten-base ==4.0.*, smten-lib ==4.0.*
  extra-libraries: z3

