name: smten-z3
version: @VERSION@-@GITTAG@
synopsis: Smten library
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2012, 2013  SRI International, Inc.
author: Richard Uhler
maintainer: ruhler@csail.mit.edu
category: Language
build-type: Simple
cabal-version: >=1.8
stability: experimental
description:
  This package provides a z3 backend for smten.

source-repository this
  type: git
  location: https://github.com/ruhler/smten.git
  branch: @GITBRANCH@
  tag: @GITTAG@

library
  exposed-modules:
    Smten.Symbolic.Solver.Z3
    Smten.Compiled.Smten.Symbolic.Solver.Z3
  
  other-modules:
    Smten.Runtime.Z3FFI

    Smten.Tests.Z3
    Smten.Compiled.Smten.Tests.Z3

    
  build-depends: base ==4.6.*, hashtables ==1.0.*,
                 smten ==@VERSIONMAJOR@.*, smten-base ==@VERSIONMAJOR@.*,
                 smten-lib ==@VERSIONMAJOR@.*
  extra-libraries: dl
  c-sources: z3.c
  ghc-options: -fwarn-unused-binds -fwarn-unused-imports

test-suite test-smten-z3
  type: exitcode-stdio-1.0
  main-is: tests.hs
  build-depends: base ==4.6.*, hashtables ==1.0.*,
                 smten-base ==@VERSIONMAJOR@.*, smten-lib ==@VERSIONMAJOR@.*
  extra-libraries: dl
  c-sources: z3.c

