name: smten
version: 3.0.0.0
synopsis: Smten library
license: AllRightsReserved
license-file: LICENSE
author: Richard Uhler
maintainer: ruhler@csail.mit.edu
category: Language
build-type: Simple
cabal-version: >=1.8
stability: experimental
data-dir: share
data-files:
    doc/*.txt
    lib/Prelude.smtn
    lib/Smten/*.smtn
    lib/Smten/Tests/*.smtn
    lib/Smten/Tests/SMT/*.smtn
source-repository this
  type: git
  location: /afs/csail.mit.edu/u/r/ruhler/git/smten
  --branch:
  --tag:
library
  exposed-modules:
    Smten
    Smten.Bit
    Smten.Strict
    Smten.Failable
    Smten.HashTable

    Smten.Name
    Smten.Name.Name
    Smten.Name.Sugar

    Smten.Sig

    Smten.Type
    Smten.Type.Canonical
    Smten.Type.Typeof
    Smten.Type.Sugar
    Smten.Type.TH
    Smten.Type.Utils
    Smten.Type.SmtenT
    Smten.Type.Type
    Smten.Type.SmtenTs
    Smten.Type.Ppr

    Smten.Exp
    Smten.Exp.Exp
    Smten.Exp.Typeof
    Smten.Exp.Match
    Smten.Exp.Sugar
    Smten.Exp.Utils
    Smten.Exp.Do
    Smten.Exp.Ppr

    Smten.Module
    Smten.Module.Entity
    Smten.Module.Module
    Smten.Module.Qualify
    Smten.Module.Ppr

    Smten.Dec
    Smten.Dec.Prelude
    Smten.Dec.Record
    Smten.Dec.Env
    Smten.Dec.Dec
    Smten.Dec.Ppr
    Smten.Dec.Sugar
    Smten.Dec.Utils

    Smten.Typing
    Smten.Typing.Infer
    Smten.Typing.Check
    Smten.Typing.Solver
    Smten.Typing.ConTs
    Smten.Typing.KInfer
    Smten.Typing.KSolver

    Smten.Parser
    Smten.Parser.Monad
    Smten.Parser.Lexer
    Smten.Parser.Grammar
    Smten.Parser.PatOrExp
    Smten.Parser.Utils

    Smten.CodeGen
    Smten.CodeGen.CG
    Smten.CodeGen.Data
    Smten.CodeGen.Dec
    Smten.CodeGen.Exp
    Smten.CodeGen.Module
    Smten.CodeGen.Name
    Smten.CodeGen.Type
    Smten.CodeGen.Ppr

    Smten.Runtime.Haskelly
    Smten.Runtime.Prelude
    Smten.Runtime.Symbolic

    Smten.SMT.Assert
    Smten.SMT.AST
    Smten.SMT.Solver
    Smten.SMT.Yices.FFI2
    Smten.SMT.Yices.Yices2

    Smten.Symbolic

    Smten.Loader

    Smten.Fresh
    Smten.Location

    Smten.Ppr
    Smten.Lit
  other-modules: Paths_smten
  build-depends: base ==4.6.*, mtl ==2.1.*, hashable ==1.2.*, array ==0.4.*,
                 bytestring ==0.10.*, containers ==0.5.*,
                 template-haskell ==2.8.*, hashmap ==1.3.*,
                 directory ==1.2.*, pretty ==1.1.*,
                 MissingH ==1.2.*
  build-tools: happy
  extra-libraries: stp stdc++ yices2 yices1
  --ghc-prof-options: -fprof-auto-top
  ghc-options: -fwarn-unused-binds -fwarn-unused-imports

