name: smten
version: 3.0.0.0
synopsis: Smten library
license: AllRightsReserved
license-file: LICENSE
author: Richard Uhler
maintainer: ruhler@csail.mit.edu
category: Language
build-type: Simple
cabal-version: >=1.8
stability: experimental
data-dir: share
data-files:
    doc/*.txt
    lib/*.smtn
    lib/Control/Monad/*.smtn
    lib/Control/Monad/IO/*.smtn
    lib/Control/Monad/State/*.smtn
    lib/Data/*.smtn
    lib/Debug/*.smtn
    lib/Smten/*.smtn
    lib/Smten/Sudoku/*.smtn
    lib/Smten/Tests/*.smtn
    lib/Smten/Tests/SMT/*.smtn

source-repository this
  type: git
  location: /afs/csail.mit.edu/u/r/ruhler/git/smten
  --branch:
  --tag:

library
  exposed-modules:
    Smten.Runtime.Array
    Smten.Runtime.Bit
    Smten.Runtime.Builtin
    Smten.Runtime.Char
    Smten.Runtime.IO
    Smten.Runtime.Numeric
    Smten.Runtime.Primitives
    Smten.Runtime.SmtenHS
    Smten.Runtime.Symbolic
    Smten.SMT.Solvers

  other-modules:
    Smten.Bit
    Smten.Numeric
    Smten.SMT.Assert
    Smten.SMT.DebugLL
    Smten.SMT.FreeID
    Smten.SMT.Solver.Dynamic
    Smten.SMT.Solver.Static
    Smten.SMT.Yices1.FFI
    Smten.SMT.Yices1.Yices1
    Smten.SMT.Yices2.FFI
    Smten.SMT.Yices2.Yices2
    Smten.SMT.STP.FFI
    Smten.SMT.STP.STP

  build-depends: base ==4.6.*, template-haskell ==2.8.*, mtl ==2.1.*,
                 hashtables ==1.0.*, array ==0.4.*
  extra-libraries: stp stdc++ yices2 yices1
  ghc-options: -fwarn-unused-binds -fwarn-unused-imports

executable smten
  main-is: smten.hs
  build-tools: happy
  build-depends: base ==4.6.*, pretty ==1.1.*, bytestring ==0.10.*,
                 hashable ==1.2.*, containers ==0.5.*,
                 template-haskell ==2.8.*, mtl ==2.1.*, array ==0.4.*,
                 hashmap ==1.3.*, directory ==1.2.*,
                 cmdargs ==0.10.*, syb ==0.4.* 
  other-modules:
    Paths_smten

    Smten
    Smten.Failable
    Smten.Fresh
    Smten.HashTable
    Smten.Location
    Smten.Ppr
    Smten.Strict

    Smten.Name
    Smten.Name.Name
    Smten.Name.Sugar

    Smten.Sig

    Smten.Type
    Smten.Type.Canonical
    Smten.Type.Typeof
    Smten.Type.Sugar
    Smten.Type.Utils
    Smten.Type.Type
    Smten.Type.Ppr

    Smten.Lit

    Smten.Exp
    Smten.Exp.Exp
    Smten.Exp.Typeof
    Smten.Exp.Match
    Smten.Exp.Sugar
    Smten.Exp.Utils
    Smten.Exp.Do
    Smten.Exp.Ppr

    Smten.Dec
    Smten.Dec.Prelude
    Smten.Dec.Record
    Smten.Dec.Env
    Smten.Dec.Dec
    Smten.Dec.Ppr
    Smten.Dec.Sugar
    Smten.Dec.Utils

    Smten.Module
    Smten.Module.Entity
    Smten.Module.Module
    Smten.Module.Qualify
    Smten.Module.Ppr

    Smten.Typing
    Smten.Typing.Infer
    Smten.Typing.Check
    Smten.Typing.Solver
    Smten.Typing.ConTs
    Smten.Typing.KInfer
    Smten.Typing.KSolver

    Smten.CodeGen
    Smten.CodeGen.Annotates
    Smten.CodeGen.CG
    Smten.CodeGen.Data
    Smten.CodeGen.Dec
    Smten.CodeGen.Exp
    Smten.CodeGen.Module
    Smten.CodeGen.Name
    Smten.CodeGen.Type
    Smten.CodeGen.Ppr

    Smten.Parser
    Smten.Parser.Monad
    Smten.Parser.Lexer
    Smten.Parser.Grammar
    Smten.Parser.PatOrExp
    Smten.Parser.Utils

    Smten.Loader

  ghc-options: -rtsopts -fwarn-unused-binds -fwarn-unused-imports

