name: smten
version: 4.0.0.0
synopsis: Smten library
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2012, 2013  SRI International, Inc.
author: Richard Uhler
maintainer: ruhler@csail.mit.edu
category: Language
build-type: Simple
cabal-version: >=1.8
stability: experimental
description:
  This package provides the compiler for smten.
  .
  Smten is a language which integrates functional programming and SMT query
  orchestraction. The surface syntax and features of Smten are the same as
  Haskell.
  . 
  Smten code should be written as in Haskell with the following exception:
  * The Smten libraries should be imported instead of standard Haskell
    libraries. For example, import Smten.Prelude instead of Prelude,
    import Smten.Data.Maybe instead of Data.Maybe, and so on. The Smten
    libraries are available in the smten-base and smten-lib cabal packages.
  .
  The interface for SMT queries is exported by the "Smten.Symbolic" module,
  which is part of the smten-lib package. Additional SMT solver backends are
  available in packages smten-yices1, smten-yices2, smten-z3, smten-stp, and
  smten-minisat.
  . 
  To compile smten code, run the smten command as you would run ghc. For more
  details on which options the smten command supports, run:
  > smten --help

source-repository this
  type: git
  location: https://github.com/ruhler/smten.git
  --branch:
  --tag:

executable smten
  main-is: smten.hs
  build-depends: base ==4.6.*, process ==1.1.*, mtl ==2.1.*

library
  exposed-modules:
    Smten.Plugin.Annotations
    Smten.Plugin.Plugin
  other-modules:
    Smten.Plugin.CG
    Smten.Plugin.Class
    Smten.Plugin.Data
    Smten.Plugin.Exp
    Smten.Plugin.Name
    Smten.Plugin.Newtype
    Smten.Plugin.TyCon
    Smten.Plugin.Type
    Smten.Plugin.Output.Syntax
    Smten.Plugin.Output.Ppr
  build-depends: base ==4.6.*, ghc ==7.6.*, directory ==1.2.*,
                 mtl ==2.1.*, pretty ==1.1.*
  ghc-options: -fwarn-unused-binds -fwarn-unused-imports

